<resources>
    <string name="app_name">Amplify Authentication</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Main activity strings -->
    <string name = "string_name">User login status is</string>


    <!-- Strings used in user form -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_name">User Name</string>
    <string name="user_instruction">Please enter user details</string>
    <string name="submit">Submit</string>

</resources>
