<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_instruction"
        android:gravity="center"
        android:textSize="25dp"/>

    <EditText
        android:id = "@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/first_name"/>

    <EditText
        android:id = "@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/last_name"/>
    <EditText
        android:id = "@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/user_name"/>

    <EditText
        android:id = "@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/email_address"/>
    <EditText
        android:id = "@+id/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/date_of_birth"/>

    <EditText
        android:id = "@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/mobile_number"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>
